integrate bootstrap & fix login design

--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="container">
+  <nav class="navbar">
+    <a class="navbar-brand text-dark" href="#">
+      Spoofity
+    </a>
+  </nav>
+</div>
