--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 
 <ui-view name="header"></ui-view>
 <main>
-  <ui-view name="content">
-    <a uiSref="login" uiSrefActive="active">Hello</a>
-    <a uiSref="about" uiSrefActive="active">About</a>
-  </ui-view>
+  <ui-view name="content"></ui-view>
 </main>
