--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,7 +1,9 @@
-<div>
-  <p>Name: {{Auth.user.display_name}}</p>
-  <p>Email: {{Auth.user.email}}</p>
-  <p>Followers: {{Auth.user.followers.total}}</p>
-  <p>Url:  <a href="{{Auth.user.external_urls.spotify}}"> {{Auth.user.external_urls.spotify}}</a></p>
+<div class="main-container px-3 px-lg-5 mx-auto">
+  <div *ngIf="true">
+    <p>Name: {{Auth.user.display_name}}</p>
+    <p>Email: {{Auth.user.email}}</p>
+    <p>Followers: {{Auth.user.followers.total}}</p>
+    <p>Url:  <a href="{{Auth.user.external_urls.spotify}}"> {{Auth.user.external_urls.spotify}}</a></p>
 
+  </div>
 </div>
