--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,3 +6,8 @@
 
 // Importing bootstrap
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
+
+
+@import 'components/layout';
+@import 'components/avatar';
+
