fix logout functionality

--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -19,7 +19,7 @@
             <button ngbDropdownItem>Profile</button>
             <button ngbDropdownItem>Settings</button>
             <div class="dropdown-divider"></div>
-            <a uiSref="login" ngbDropdownItem>Logout</a>
+            <a uiSref="logout" ngbDropdownItem>Logout</a>
           </div>
         </div>
       </div>
