integrate spotify featured playlist api

--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="main-container px-3 px-lg-5 mx-auto">
   <section>
     <h2>Featured Playlists</h2>
+    <app-slider [List]="Spotify.featured.playlists.items" [perView]="8"></app-slider>
   </section>
 </div>
