--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mx-auto mb-5 py-1 bg-dark">
+<div class="container-fluid sticky-top mx-auto mb-5 py-1 bg-dark">
   <nav class="navbar">
     <a class="navbar-brand text-white font-weight-bold " uiSref="home">
       Spoofity
