--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -156,6 +156,13 @@ h1, .h1 {
 p, .paragraph {
   font-family: "Poppins-Regular";
   font-size: 1rem;
+  white-space: normal;
+  letter-spacing: 1.5px;
+}
+
+span {
+  letter-spacing: 1.5px;
+  white-space: normal;
 }
 
 /*!
@@ -521,7 +528,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 h3, .h3 {
@@ -1839,14 +1846,14 @@ pre code {
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #535353;
+  border-top: 1px solid #e8e8e9;
 }
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #535353;
+  border-bottom: 2px solid #e8e8e9;
 }
 .table tbody + tbody {
-  border-top: 2px solid #535353;
+  border-top: 2px solid #e8e8e9;
 }
 
 .table-sm th,
@@ -1855,11 +1862,11 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #535353;
+  border: 1px solid #e8e8e9;
 }
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #535353;
+  border: 1px solid #e8e8e9;
 }
 .table-bordered thead th,
 .table-bordered thead td {
@@ -2064,7 +2071,7 @@ pre code {
 .table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
-  border-color: #535353;
+  border-color: #e8e8e9;
 }
 
 .table-dark {
@@ -5603,7 +5610,7 @@ a.close.disabled {
   align-items: flex-start;
   justify-content: space-between;
   padding: 1rem 1rem;
-  border-bottom: 1px solid #535353;
+  border-bottom: 1px solid #e8e8e9;
   border-top-left-radius: calc(0.3rem - 1px);
   border-top-right-radius: calc(0.3rem - 1px);
 }
@@ -5629,7 +5636,7 @@ a.close.disabled {
   align-items: center;
   justify-content: flex-end;
   padding: 0.75rem;
-  border-top: 1px solid #535353;
+  border-top: 1px solid #e8e8e9;
   border-bottom-right-radius: calc(0.3rem - 1px);
   border-bottom-left-radius: calc(0.3rem - 1px);
 }
@@ -6264,23 +6271,23 @@ button.bg-dark:focus {
 }
 
 .border {
-  border: 1px solid #535353 !important;
+  border: 1px solid #e8e8e9 !important;
 }
 
 .border-top {
-  border-top: 1px solid #535353 !important;
+  border-top: 1px solid #e8e8e9 !important;
 }
 
 .border-right {
-  border-right: 1px solid #535353 !important;
+  border-right: 1px solid #e8e8e9 !important;
 }
 
 .border-bottom {
-  border-bottom: 1px solid #535353 !important;
+  border-bottom: 1px solid #e8e8e9 !important;
 }
 
 .border-left {
-  border-left: 1px solid #535353 !important;
+  border-left: 1px solid #e8e8e9 !important;
 }
 
 .border-0 {
@@ -10060,12 +10067,12 @@ h3 {
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-    border-color: #535353;
+    border-color: #e8e8e9;
   }
 
   .table .thead-dark th {
     color: inherit;
-    border-color: #535353;
+    border-color: #e8e8e9;
   }
 }
 .glide {
@@ -10204,6 +10211,10 @@ h3 {
   max-width: 1440px;
 }
 
+.section__title {
+  font-family: "Montserrat-Bold";
+}
+
 .avatar--sm {
   width: 40px;
   height: 40px;
@@ -10225,23 +10236,26 @@ h3 {
 }
 
 .avatar--1xl {
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
 }
 
 .avatar--2xl {
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
 }
 
 .glide__arrow {
   color: #121212;
 }
 .glide__arrow--left {
-  left: -3rem;
+  left: -1rem;
 }
 .glide__arrow--right {
-  right: -3rem;
+  right: -1rem;
+}
+.glide__card img:hover {
+  transform: scale(1.02);
 }
 
 /*# sourceMappingURL=style.css.map */
