--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-6 pt-4">
       <h1>Music for everyone.</h1>
       <p class="text-secondary py-3">A clone application of spotify using spotify API. Feel free to explore the redesigned spotify.</p>
-      <button class="btn btn-primary px-5" (click)="login()">LOG IN</button>
+      <button class="btn btn-primary px-5 rounded-pill" (click)="login()"><small>LOG IN</small></button>
     </div>
     <div class="col-lg-6 pl-5 pt-5 pt-lg-0">
       <img class="w-100" src="/assets/imgs/illustration.svg" alt="">
