--- a/src/app/components/partials/slider/slider.component.html
+++ b/src/app/components/partials/slider/slider.component.html
@@ -1,16 +1,17 @@
 <div class="glide" #glide>
   <div class="glide__track" data-glide-el="track">
     <ul class="glide__slides py-3">
-      <!-- <li *ngFor="let item of [1,2,3,4,5,6,7,8,8,7,65,2]">{{item}}</li> -->
-
-      <li class="" *ngFor="let item of List">
-        <img class="avatar--2xl mx-2 rounded shadow-sm" src="{{item.images[0].url}}" alt="item.name">
+      <li class="glide__card" *ngFor="let item of List" uiSref="playlist" [uiParams]="{id: item.id}">
+        <img class="avatar--{{imgSize}} rounded shadow-sm" [src]="listOf=='playlist' ? item.images[0].url : item.album.images[0].url">
+        <div class="p-1 pr-3">
+          <span class="font-weight-bold">{{listOf=='playlist' ? item.name : item.album.name}}</span>
+          <small class="d-block text-secondary">{{(listOf=='playlist' ? item.type  : item.album.type)}}</small>
+        </div>
       </li>
     </ul>
   </div>
-
-  <div class="glide__arrows" data-glide-el="controls">
-    <button class="glide__arrow rounded-circle glide__arrow--left" data-glide-dir="<"><i class="far fa-chevron-left"></i></button>
-    <button class="glide__arrow rounded-circle glide__arrow--right" data-glide-dir=">"><i class="far fa-chevron-right"></i></button>
+  <div *ngIf="List.length > perView && isMounted" class="glide__arrows" data-glide-el="controls">
+    <button class="glide__arrow rounded-circle bg-white glide__arrow--left" data-glide-dir="<"><i class="far fa-chevron-left"></i></button>
+    <button class="glide__arrow rounded-circle bg-white glide__arrow--right" data-glide-dir=">"><i class="far fa-chevron-right"></i></button>
   </div>
 </div>
