added album component

--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -25,7 +25,7 @@
       [List]="genre.tracks"
       [perView]="6"
       [type]="'carousel'"
-      [listOf]="'album'"
+      [listOf]="'track'"
       [imgSize]="'1xl'"
       >
     </app-slider>
